#4 4 - added fromDays requestParam to filter the logs from those many days only - default value is 1 day currently

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ jira.username=username
 jira.password=password
 jira.project=dummy
 jira.baseUrl=jira_base_url
-jira.searchJqlText = project = ${jira.project} AND resolution = Unresolved AND assignee in (currentUser()) ORDER BY priority DESC, updated DESC
+jira.uomname=sample-team
+#jira.searchJqlText = project = ${jira.project} AND resolution = Unresolved AND assignee in (currentUser()) ORDER BY priority DESC, updated DESC
+jira.searchJqlText = project = ${jira.project} AND issuetype in (Bug, Spike, Story) AND Sprint = 15359 AND assignee in (membersOf(${jira.uomname})) ORDER BY priority DESC, updated DESC
